# dbwork-project

./: .gitignore  CLAUDE.md  add.py  dbwork.md  delete.py  guru_page.py  main.py  mainS.py  play.py  pyproject.toml
dbwork/: __init__.py  batch_ingest.py  config.py  db.py  delete_film.py  guru_parser.py  ingest.py
guiclasses/: MainScreem.py  imagelist_lab1.py  mainscreem.kv
logic/: __init__.py  film_wrapper.py  query_film.py
