[project]
name = "TInv"
version = "0.3.0"
description = "TInvent"
readme = "README.md"
requires-python = "<3.14.0,>=3.11.0"
dependencies = [
    "bs4>=0.0.2",
    "fuzzywuzzy>=0.18.0",
    "icecream>=2.1.10",
    "kivymd",
    "lxml>=6.0.2",
    "numpy>=2.4.2",
    "pyperclip>=1.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.40.0",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
